--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "classnames": "^2.3.1",
+    "gh-pages": "^3.2.0",
     "node-sass": "4.14.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
@@ -18,11 +19,13 @@
     "redux-thunk": "^2.3.0",
     "web-vitals": "^1.0.1"
   },
+  "hompage": "http://talgat2307.github.io/kanban-board",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
