--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "redux-thunk": "^2.3.0",
     "web-vitals": "^1.0.1"
   },
-  "hompage": "http://talgat2307.github.io/kanban-board",
+  "homepage": "http://talgat2307.github.io/kanban-board",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
